@@ -83,9 +83,9 @@ public class HttpURLConnectionClient extends HttpClient {
   static HttpHeaders getHeaders(StripeRequest request) {
     Map<String, List<String>> userAgentHeadersMap = new HashMap<>();
 
-    userAgentHeadersMap.put("User-Agent", Arrays.asList(buildUserAgentString()));
+    userAgentHeadersMap.put("User-Agent", List.of(buildUserAgentString()));
     userAgentHeadersMap.put(
-        "X-Stripe-Client-User-Agent", Arrays.asList(buildXStripeClientUserAgentString()));
+        "X-Stripe-Client-User-Agent", List.of(buildXStripeClientUserAgentString()));
 
     return request.headers().withAdditionalHeaders(userAgentHeadersMap);
   }
