@@ -79,11 +79,11 @@ public class InvoiceItemTest extends BaseStripeTest {
     List<String> discountIds = discounts.stream().map(x -> x.getId()).collect(Collectors.toList());
     invoiceItem.setDiscounts(discountIds);
     assertEquals(discounts, invoiceItem.getDiscountObjects());
-    invoiceItem.setDiscounts(Arrays.asList(discountIds.get(0)));
+    invoiceItem.setDiscounts(List.of(discountIds.get(0)));
     assertEquals(invoiceItem.getDiscountObjects().size(), 1);
     assertNull(invoiceItem.getDiscountObjects().get(0));
     invoiceItem.setDiscounts(discountIds);
-    assertEquals(Arrays.asList(null, null), invoiceItem.getDiscountObjects());
+    assertEquals(List.of(null, null), invoiceItem.getDiscountObjects());
     invoiceItem.setDiscountObjects(discounts);
     assertEquals(discounts, invoiceItem.getDiscountObjects());
   }
