@@ -585,7 +585,7 @@ public class FormEncoderTest extends BaseStripeTest {
     nestedList.add("C");
 
     List<Collection<String>> collections =
-        Arrays.asList(nestedTreeSet, nestedDequeue, nestedLinkedHashSet, nestedList);
+      List.of(nestedTreeSet, nestedDequeue, nestedLinkedHashSet, nestedList);
 
     for (Collection<String> collection : collections) {
       final Map<String, Object> params = new LinkedHashMap<>();
